--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
 
         <div class="chinelo">
-            <h2>Chinelo Nuvem Cinza</h2>
+            <h2>Chinelo Nuvem Verde</h2>
             <img src="./img/Chinelo_Nuvem_Unissex_-_Verde___32_33-removebg-preview.png" alt="">
             <p class="desconto">DE <span>R$ 215,00</span> POR APENAS 4X SEM JUROS</p>
             <hr>
