--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     
-   <header>
+   <!-- <header>
       <h2>Em até 12x no cartão de crédito!</h2>
-   </header>
+   </header> -->
 
    <section class="inicio">
       <div class="content">
@@ -259,5 +259,11 @@
      </div>
    </footer>
 
+   <div class="timer">
+    <p>Oferta expira em</p>
+    <div id="timer"></div>
+   </div>
+
+   <script src="./contador.js"></script>
 </body>
 </html>
