--- a/index.html
+++ b/index.html
@@ -36,49 +36,51 @@
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Versátil</h1>
-            <p>Para uso no dia-a-dia e no banho</p>
+            <p>Para uso no dia-a-dia e no banho, ande nas nuvens em qualquer lugar</p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Adaptável</h1>
-            <p>Melhor Alinhamento dos Pés</p>
+            <p>Melhor Alinhamento dos Pés, garantindo o equilíbrio e ajudando
+                a evitar futuras dores pelo corpo
+            </p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Eficaz</h1>
-            <p>Bordas laterais elevadas</p>
+            <p>Bordas laterais elevadas, proporcionando mais acomodação dos dedos e evita a laterização do calcanhar</p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Sem dores</h1>
-            <p>Acomodação dos dedos</p>
+            <p>Corrige sua postura e melhora a circulação sanguínea nas pernas e pés. Alivia sintomas de trombose, esporão e fascite plantar</p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Confortável</h1>
-            <p>Solado grosso (4cm)</p>
+            <p>Com 3cm de espessura no calcanhar ele absorve 80% do impacto nos pés, trazendo um alivio imediato nos membros inferiores</p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Impermeável</h1>
-            <p>Não fica encharcado ao molhar</p>
+            <p>Não fica encharcado ao molhar, te garantindo segurança ao pegar chuvas ou ao usá-lo no banho</p>
         </div>
 
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
             <h1>Antiderrapante</h1>
-            <p>Segurança garantida mesmo molhado</p>
+            <p>Garante flexibilidade e maciez, prevenindo formação de calos, hiperqueratose, alívio das dores, pressão no calcanhar entre outros</p>
          </div>
   
         <div class="beneficio">
             <i class="fa-solid fa-check"></i>
-            <h1>Ultra Leve</h1>
-            <p>Ande sem se preocupar</p>
+            <h1>Terapêutico</h1>
+            <p>Partículas de massagem que relaxam os músculos, estimulando a circulação sanguínea e aliviando o estresse</p>
         </div>
 
       </div>
